Split URL properties into prefix/suffix
Bump version to 1.2.0.
Address some minor Sonar complaints.

Change-Id: I3205e4c294f0826d363e591ce9881a4f25e0cfa2
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>